--- a/style.css
+++ b/style.css
@@ -4,18 +4,30 @@ background-color: rgb(23, 160, 179);
 h1{
     color:white;
     text-align: center;
-    font-size: 450%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 22px;
 }
-p{
-    font-size: 150%;
+.kul{
     text-align: left;
     color:white;
+    font-family: Arial, Helvetica, sans-serif;
+    BORDER:1PX SOLID BLACK;
+    border-radius: 5px;
 }
 .altp{
     color:black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    background-color: white;
 }
 h2{
     color:black;
     text-align: left;
-    font-size: 300%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.tanke{
+    text-align: right;
+}
+a{
+    text-decoration:none;
 }
